--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p></p>
 
     <li>Final de semana e feriado</li>
-    <a href="finais de semana e feriado.html" target="_blank">Horário finais de semana e feriado</a>
+    <a href="minha família.html" target="_blank">Minha Família</a>
     
 </body>
 </html>
@@ -31,6 +31,3 @@
 
 <link rel="stylesheet"
 href="style.css">
-
-<a href="maquiagem.html" target="_blank">Maquiagens</a>
-
